<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EJLookup</string>

    <string name="text_menu_settings">Settings</string>
    <string name="text_menu_about">About</string>
    <string name="text_menu_copy">Copy text</string>

    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="state_unknown">Starting…</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>

    <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
    <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
    <string name="text_button_resume_cellular">Resume download</string>
    <string name="text_button_wifi_settings">Wi-Fi settings</string>
    <string name="text_verifying_download">Verifying Download</string>
    <string name="text_validation_complete">Dictionary Download Complete.\nSelect OK to exit.</string>
    <string name="text_validation_failed">Dictionary File Validation Failed.</string>
    <string name="text_button_pause">Pause Download</string>
    <string name="text_button_resume">Resume Download</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_cancel_verify">Cancel Verification</string>
    <string name="text_progress_zero">0MB / 0MB</string>
    <string name="text_progress_zero_percent">0%</string>

    <string name="setting_title_general">General</string>
    <string name="setting_title_font_size">Font size</string>
    <string name="setting_summary_font_size">On tablets, it is recommended to use Large font</string>
    <string name="setting_title_max_results">Results limit</string>
    <string name="setting_title_max_suggest">Suggestions limit</string>
    <string name="setting_title_theme_color">Theme color</string>
    <string name="setting_summary_theme_color">Dark or light background</string>
    <string name="setting_title_suggest_romaji">Romaji suggestions</string>
    <string name="setting_summary_suggest_romaji">Convert kana to latin symbols</string>
    <string name="setting_title_dictionaries">Dictionaries</string>
    <string name="setting_title_language">Interface language</string>
    <string name="setting_summary_language">Application restart required</string>

    <string name="text_clipboard_empty">Clipboard is empty</string>
    <string name="mount_dlg_text">Loading dictionaries</string>
    <string name="mount_dlg_head">Please wait</string>
    <string name="text_dictionary_missing">Dictionaries not found!\n\nTry restarting the application.</string>
    <string name="about_dlg_title">About %s</string>
    <string name="about_dlg_version">Version %s,\nGinKage (ginkage@yandex.ru)</string>
    <string name="about_dlg_sources">Simple Japanese dictionary\n\nThis application was created using data from MONASH and Warodai project,\nhttp://warodai.ru</string>
    <string name="text_mount_error">Error loading dictionaries!\nTry restarting.</string>
    <string name="text_query_missing">Please enter query</string>
    <string name="text_error_unknown">Unexpected error occurred</string>
    <string name="text_found_nothing">Nothing found</string>
    <string name="text_found_toomuch">Too many results, showing first %d</string>
    <string name="text_dictionary_partial">(partial)</string>
    <string name="text_dictionary_download">Download dictionaries</string>


    <string name="setting_dictionaries">dict</string>
    <string name="setting_font_size">fontSize</string>
    <string name="setting_general">general</string>
    <string name="setting_max_results">limResult</string>
    <string name="setting_max_suggest">limSuggest</string>
    <string name="setting_theme_color">themeColor</string>
    <string name="setting_suggest_romaji">sugRoman</string>
    <string name="setting_language">language</string>
</resources>
