<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="@string/setting_general" android:title="@string/setting_title_general">
        <ListPreference android:key="@string/setting_font_size" android:title="@string/setting_title_font_size" android:entryValues="@array/fontSizeValues" android:entries="@array/fontSize" android:defaultValue="0" android:summary="@string/setting_summary_font_size"/>
        <ListPreference android:key="@string/setting_max_results" android:entries="@array/maxResult" android:defaultValue="100" android:title="@string/setting_title_max_results" android:entryValues="@array/maxResultValues"/>
        <ListPreference android:key="@string/setting_max_suggest" android:entries="@array/maxSuggest" android:defaultValue="10" android:title="@string/setting_title_max_suggest" android:entryValues="@array/maxSuggestValues"/>
        <ListPreference android:key="@string/setting_theme_color" android:entryValues="@array/themeColorValues" android:entries="@array/themeColor" android:title="@string/setting_title_theme_color" android:summary="@string/setting_summary_theme_color" android:defaultValue="0"/>
        <CheckBoxPreference android:key="@string/setting_suggest_romaji" android:summary="@string/setting_summary_suggest_romaji" android:title="@string/setting_title_suggest_romaji" android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="@string/setting_dictionaries" android:title="@string/setting_title_dictionaries">
       <!-- <Preference android:key="download" android:title="Скачать все словари" android:summary="Суммарно скачивается около 100 Мб, рекомендуется использовать WiFi!"/> -->
    </PreferenceCategory>
</PreferenceScreen>
